@@ -1,26 +1,25 @@
 package com.team573.gongguri.domain.chat.service;
 
 
-import static com.team573.gongguri.domain.chat.mapper.ChatMapper.toChatRoomParticipation;
-import static com.team573.gongguri.global.exception.ErrorCode.NOT_FOUND_CHATROOM;
-import static com.team573.gongguri.global.exception.ErrorCode.NOT_FOUND_MEMBER;
+import static com.team573.gongguri.global.exception.CustomErrorCode.NOT_FOUND_CHATROOM;
+import static com.team573.gongguri.global.exception.CustomErrorCode.NOT_FOUND_MEMBER;
 
 import com.team573.gongguri.domain.chat.dto.ChatMessageRequestDto;
 import com.team573.gongguri.domain.chat.dto.ChatMessageResponseDto;
 import com.team573.gongguri.domain.chat.entity.ChatMessage;
 import com.team573.gongguri.domain.chat.entity.ChatRoom;
 import com.team573.gongguri.domain.chat.entity.ChatRoomParticipation;
-import com.team573.gongguri.domain.chat.mapper.ChatMapper;
+import com.team573.gongguri.domain.chat.mapper.ChatMessageMapper;
+import com.team573.gongguri.domain.chat.mapper.ChatRoomMapper;
 import com.team573.gongguri.domain.chat.repository.ChatMessageRepository;
 import com.team573.gongguri.domain.chat.repository.ChatRoomParticipationRepository;
 import com.team573.gongguri.domain.chat.repository.ChatRoomRepository;
 import com.team573.gongguri.domain.chat.repository.CustomChatMessageRepository;
 import com.team573.gongguri.domain.member.entity.Member;
 import com.team573.gongguri.domain.member.repository.MemberRepository;
-import com.team573.gongguri.global.exception.ErrorException;
+import com.team573.gongguri.global.exception.CustomException;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.bson.types.ObjectId;
 import org.springframework.data.domain.PageRequest;
@@ -41,10 +40,12 @@ public class ChatService {
         Long roomId,
         ChatMessageRequestDto requestDto
     ) {
-        ChatMessage createdMessage = chatMessageRepository.save(
-            ChatMapper.toChatMessage(roomId, requestDto.nickname(), requestDto.content())
-        );
-        return ChatMapper.toChatMessageResponseDto(createdMessage);
+        ChatMessage createdMessage
+            = ChatMessageMapper.toChatMessage(roomId, requestDto.nickname(), requestDto.content());
+
+        chatMessageRepository.save(createdMessage);
+
+        return ChatMessageMapper.toDto(createdMessage);
     }
 
     // 채팅방 생성
@@ -57,23 +58,23 @@ public class ChatService {
     // 채팅방 참여자 추가
     public void addChatParticipation(Long roomId, String email) {
         Member member = memberRepository.findByEmail(email)
-            .orElseThrow(() -> new ErrorException(NOT_FOUND_MEMBER));
+            .orElseThrow(() -> new CustomException(NOT_FOUND_MEMBER));
 
         ChatRoom chatRoom = chatRoomRepository.findById(roomId)
-            .orElseThrow(() -> new ErrorException(NOT_FOUND_CHATROOM));
+            .orElseThrow(() -> new CustomException(NOT_FOUND_CHATROOM));
 
-        ChatRoomParticipation createdParticipation = toChatRoomParticipation(member, chatRoom);
+        ChatRoomParticipation createdParticipation = ChatRoomMapper.toParticipationEntity(member, chatRoom);
 
         chatRoomParticipationRepository.save(createdParticipation);
     }
 
     // 채팅방 참여자 제거
-    public void deleteChatParticipation(Long roomId, String email) {
-        Member member = memberRepository.findByEmail(email)
-            .orElseThrow(() -> new ErrorException(NOT_FOUND_MEMBER));
+    public void deleteChatParticipation(Long roomId, Long memberId) {
+        Member member = memberRepository.findById(memberId)
+            .orElseThrow(() -> new CustomException(NOT_FOUND_MEMBER));
 
         ChatRoom chatRoom = chatRoomRepository.findById(roomId)
-            .orElseThrow(() -> new ErrorException(NOT_FOUND_CHATROOM));
+            .orElseThrow(() -> new CustomException(NOT_FOUND_CHATROOM));
 
         chatRoomParticipationRepository.deleteByChatRoomAndMember(chatRoom, member);
     }
@@ -99,10 +100,11 @@ public class ChatService {
         }
 
         return messages.stream()
-            .map(ChatMapper::toChatMessageResponseDto)
-            .collect(Collectors.toList());
+            .map(ChatMessageMapper::toDto)
+            .toList();
     }
 
+    // 가장 최근 메시지 조회
     public Map<Long, String> getFirstMessageMap(List<Long> chatRoomIds) {
         return customChatMessageRepository.findLatestMessageByRoomIds(chatRoomIds);
     }
